# pytropd

./: .buildinfo  .gitignore  INSTALL  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  TropD_Calculate_MaxLat.py  TropD_Calculate_Mon2Season.py  TropD_Calculate_StreamFunction.py  TropD_Calculate_TropopauseHeight.py  TropD_Calculate_ZeroCrossing.py  TropD_Example_Calculations.py  TropD_Example_Calculations1.py  TropD_Example_Calculations2.py  TropD_Metric_EDJ.py  TropD_Metric_OLR.py  TropD_Metric_PE.py  TropD_Metric_PSI.py  TropD_Metric_PSL.py  TropD_Metric_STJ.py  TropD_Metric_TPB.py  TropD_Metric_UAS.py  __init__.py  environment.yml  functions.py  genindex.html  helper.html  includeme.html  index.html  install.html  make.bat  metrics.html  metrics.py  objects.inv  py-modindex.html  reference.html  search.html  (+5 more)
ValidationData/: XN2O.nc  pr.nc  rlnt.nc  rlntcs.nc  uas.nc
ValidationMetrics/: EDJ.nc  EDJ_ANN.nc  OLR.nc  OLR_ANN.nc  PE.nc  PE_ANN.nc  PSI.nc  PSI_ANN.nc  PSL_DJF.nc  PSL_JJA.nc  PSL_MAM.nc  PSL_SON.nc  STJ.nc  STJ_ANN.nc  TPB.nc  TPB_ANN.nc  UAS.nc  UAS_ANN.nc
_modules/: TropD_Metric_OLR.html  TropD_Metric_PSI.html  functions.html  index.html  metrics.html
_sources/: helper.rst.txt  index.rst.txt  index.txt  install.txt  metrics.txt  reference.txt  tutorial.rst.txt  tutorial.txt
_static/: alabaster.css
docs/: Makefile  make.bat
doctrees/: environment.pickle  helper.doctree  index.doctree  install.doctree  reference.doctree  tutorial.doctree
html/: index.html  install.html  search.html
pytropd.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
(+63 files in other folders)
