[metadata]
name = pytropd
version = 1.0.5
description = Calculation of metrics of tropical width
author = Alison Ming, Paul William Staten, Samuel Smith
author_email = admg26@gmail.com
url = https://tropd.github.io/pytropd/index.html
long_description = file: README
license = GPL-3

[options]
packages = pytropd
install_requires =
    scipy >= 1.5
    numpy >= 1.19
    python_version >= 3.6
include_package_data = True
classifiers = 
    Programming Language :: Python :: 3
